src_old_backup/driver/ajinextek/AXL(Library)/C, C++/AXC.h



	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
	// pwm 출력모드가 Manual 인 경우에만 유효하다
	// dFrequency :  (0.017 ~ 1M) 까지 설정이 가능하다. (Hz 단위)
	// dData : Pulse 폭 관련 Data 를 입력하며 Pulse Control 방식에 따라 Data 형식이 다르다.
	// Pulse 폭 제어방식이 DutyRatio인 경우 DutyRatio 
	// Pulse 폭 제어방식이 PulseWidth 인 경우 PulseWidth (us단위) 
	DWORD __stdcall AxcTriggerSetPwmManualData(long lChannelNo,double dFrequency, double dData);

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 확인한다.
	DWORD __stdcall AxcTriggerGetPwmManualData(long lChannelNo,double* dpFrequency, double* dpData);

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
	// lDataCnt : 설정 할 트리거 정보의 전체 개수
	// dpVel : dpVel[0],dpVel[1]....dpVel[DataCnt -1] 순서로 입력 가능
	// dwpFrequency : dwpFrequency[0],dwpFrequency[1]....dwpFrequency[DataCnt-1] 순서로 입력 가능(0.017 ~ 1M) 까지 설정이 가능하다.
	// dData : Pulse 폭 관련 Data 를 입력하며 Pulse Control 방식에 따라 Data 형식이 다르다.
	// Pulse 폭 제어방식이 DutyRatio인 경우 DutyRatio 
	// Pulse 폭 제어방식이 PulseWidth 인 경우 PulseWidth (us단위) 
	// ※주의 : 
	//    1) dpVel, dwpFrequency, dwpDutyRatio 의 배열 개수를 주의하여 사용해야한다.
	//		- 속도가 0인 구간에서는 PWM 출력이 불가하다.
	//    3) PWM Enable 상태에서는 사용할 수 없다.
	DWORD __stdcall AxcTriggerSetPwmPatternData(long lChannelNo, long lDataCnt,  double *dpVel, double *dpFrequency, double *dpData);

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
	DWORD __stdcall AxcTriggerSetPwmData(long lChannelNo, double dVel, double dFrequency, double dData);

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 확인한다.
	DWORD __stdcall AxcTriggerGetPwmData(long lChannelNo, double dVel, double *dpFrequency, double *dpData);

	// 카운터 모듈의 속도 값을 확인 합니다.
	DWORD __stdcall AxcStatusReadActVel(long lChannelNo, double* dpActVel);

	// 카운터 모듈의 2D 속도 값을 확인 합니다.
	DWORD __stdcall AxcStatusRead2DActVel(long lChannelNo, double* dpActVel);

	// 카운터 모듈의 Position 값을 초기화 한다.
	DWORD __stdcall AxcStatusSetActPosClear(long lChannelNo);
	
	////////////////// HPC4_30_Version
	// 카운터 모듈의 각 테이블에 할당된 트리거 출력의 레벨을 설정한다.
	// uLevel : 트리거 출력 신호의 Active Level
	//   [0]  : 트리거 출력시 'Low' 레벨 출력.
	//   [1]  : 트리거 출력시 'High' 레벨 출력.
    DWORD  __stdcall AxcTableSetTriggerLevel(long lModuleNo, long lTablePos, DWORD uLevel);

	// 카운터 모듈의 각 테이블에 지정된 트리거 출력의 레벨 설정값을 확인한다.
    DWORD  __stdcall AxcTableGetTriggerLevel(long lModuleNo, long lTablePos, DWORD* upLevel);


	// 카운터 모듈의 각 테이블에 할당된 트리거 출력의 펄스 폭을 설정한다.
	// dTriggerTimeUSec : [Default 500ms], us단위로 지정
	DWORD  __stdcall AxcTableSetTriggerTime(long lModuleNo, long lTablePos, double dTriggerTimeUSec);

	// 카운터 모듈의 각 테이블에 지정된 트리거 출력의 펄스 폭 설정값을 확인한다.
    DWORD  __stdcall AxcTableGetTriggerTime(long lModuleNo, long lTablePos, double* dpTriggerTimeUSec);


	// 카운터 모듈의 각 테이블에 할당 할 2개의 엔코더 입력 신호를 설정한다.
	// uEncoderInput1 [0-3]: 카운터 모듈에 입력되는 4개의 엔코더 신호중 하나
	// uEncoderInput2 [0-3]: 카운터 모듈에 입력되는 4개의 엔코더 신호중 하나
	DWORD  __stdcall AxcTableSetEncoderInput(long lModuleNo, long lTablePos, DWORD uEncoderInput1, DWORD uEncoderInput2);

	// 카운터 모듈의 각 테이블에 할당 된 2개의 엔코더 입력 신호를 확인한다.
	DWORD  __stdcall AxcTableGetEncoderInput(long lModuleNo, long lTablePos, DWORD* upEncoderInput1, DWORD* upEncoderInput2);


	// 카운터 모듈의 각 테이블에 할당 할 트리거 출력 포트를 설정한다.
	// uTriggerOutport [0x0-0xF]: Bit0: 트리거 출력 0, Bit1: 트리거 출력 1, Bit2: 트리거 출력 2, Bit3: 트리거 출력 3 
	// Ex) 0x3(3)   : 출력 0, 1에 트리거 신호를 출력하는 경우
	//     0xF(255) : 출력 0, 1, 2, 3에 트리거 신호를 출력하는 경우
	DWORD  __stdcall AxcTableSetTriggerOutport(long lModuleNo, long lTablePos, DWORD uTriggerOutport);

	// 카운터 모듈의 각 테이블에 할당 된 트리거 출력 포트를 확인한다.
	DWORD  __stdcall AxcTableGetTriggerOutport(long lModuleNo, long lTablePos, DWORD* upTriggerOutport);


	// 카운터 모듈의 각 테이블에 설정된 트리거 위치에 대한 허용 오차 범위를 설정한다.
	// dErrorRange  : 지정 축의 Unit단위로 트리거 위치에 대한 허용 오차 범위를 설정
	DWORD  __stdcall AxcTableSetErrorRange(long lModuleNo, long lTablePos, double dErrorRange);

	// 카운터 모듈의 각 테이블에 설정된 트리거 위치에 대한 허용 오차 범위를 확인한다.
	DWORD  __stdcall AxcTableGetErrorRange(long lModuleNo, long lTablePos, double* dpErrorRange);


	// 카운터 모듈의 각 테이블에 설정된 정보로(트리거 출력 Port, 트리거 펄스 폭) 트리거를 1개 발생시킨다.
	// ※ 주의 : 1) 트리거가 Disable되어 있으면 이 함수는 자동으로 Enable시켜 트리거를 발생시킴 
	//           2) Trigger Mode가 HPC4_PATTERN_TRIGGER 모드일 경우 이 함수는 자동으로 트리거 모드를 HPC4_RANGE_TRIGGER로 변경 함(하나의 트리거만 발생시키기 위해)
	DWORD  __stdcall AxcTableTriggerOneShot(long lModuleNo, long lTablePos);


	// 카운터 모듈의 각 테이블에 설정된 정보로(트리거 출력 Port, 트리거 펄스 폭), 지정한 개수만큼 설정한 주파수로 트리거를 발생시킨다.
    // lTriggerCount     : 지정한 주파수를 유지하며 발생시킬 트리거 출력 개수
	// uTriggerFrequency : 트리거를 발생시킬 주파수	
	// ※ 주의 : 1) 트리거가 Disable되어 있으면 이 함수는 자동으로 Enable시켜 패턴을 가진 트리거를 발생시킴 
	//           2) Trigger Mode가 HPC4_PATTERN_TRIGGER 모드가 아닐 경우 이 함수는 자동으로 트리거 모드를 HPC4_PATTERN_TRIGGER로 변경 함
	DWORD  __stdcall AxcTableTriggerPatternShot(long lModuleNo, long lTablePos, long lTriggerCount, DWORD uTriggerFrequency);

	// 카운터 모듈의 각 테이블에 설정된 패턴 트리거 설정 정보를(주파수, 카운터) 확인한다.
	DWORD  __stdcall AxcTableGetPatternShotData(long lModuleNo, long lTablePos, long* lpTriggerCount, DWORD* upTriggerFrequency);


	// 카운터 모듈의 각 테이블에 트리거를 출력하는 방식을 설정한다.
	// uTrigMode : 트리거를 출력하는 방식을 설정한다.
	//   [0] HPC4_RANGE_TRIGGER   : 지정한 트리거 위치에 설정한 허용 범위안에 위치할 때 트리거를 출력하는 모드
	//   [1] HPC4_VECTOR_TRIGGER  : 지한 트리거 위치에 설정한 허용 범위와 벡터 방향이 일치할 때 트리거를 출력하는 모드
	//   [3] HPC4_PATTERN_TRIGGER : 위치와 무관하게 지정한 개수만큼 설정한 주파수로 트리거를 출력하는 모드
	DWORD  __stdcall AxcTableSetTriggerMode(long lModuleNo, long lTablePos, DWORD uTrigMode);

	// 카운터 모듈의 각 테이블에 설정된 트리거를 출력하는 방식을 확인한다
	DWORD  __stdcall AxcTableGetTriggerMode(long lModuleNo, long lTablePos, DWORD* upTrigMode);
		
	// 카운터 모듈의 각 테이블 별로 출력된 누적 트리거 갯수를 초기화 한다.
	DWORD  __stdcall AxcTableSetTriggerCountClear(long lModuleNo, long lTablePos);


	// 카운터 모듈의 각 테이블에 2-D 절대위치에서 트리거 신호를 출력하기 위해 필요한 정보를 설정한다.
	// lTriggerDataCount : 설정 할 트리거 정보의 전체 개수
    //   [-1, 0]         : 등록된 트리거 정보 데이타 초기화
	// dpTriggerData     : 2-D 절대위치 트리거 정보(해당 배열의 개수는 lTriggerDataCount * 2가 되어야됨)
	//   *[0, 1]         : X[0], Y[0] 
	// lpTriggerCount    : 입력한 2-D 절대 트리거 위치에서 트리거 조건 만족 시 발생시킬 트리거 갯수를 배열로 설정(해당 배열의 개수는 lTriggerDataCount)
	// dpTriggerInterval : TriggerCount 만큼 연속해서 트리거를 발생시킬때 유지 할 간격을 주파수 단위로 설정(해당 배열의 개수는 lTriggerDataCount)
	// ※주의 : 
	//    1) 각 전달인자의 배열 개수를 주의하여 사용해야됩니다. 내부에서 사용되는 인자 보다 적은 배열을 지정하면 메모리 참조 오류가 발생 될 수 있음.
	//    2) Trigger Mode는 HPC4_RANGE_TRIGGER로 자동 변경됨
	//    3) 함수 내부에서 Trigger를 Disable한 후 모든 설정을 진행하며 완료 후 다시 Enable 시킴
	DWORD  __stdcall AxcTableSetTriggerData(long lModuleNo, long lTablePos, long lTriggerDataCount, double* dpTriggerData, long* lpTriggerCount, double* dpTriggerInterval);

	// 카운터 모듈의 각 테이블에 트리거 신호를 출력하기 위해 설정한 트리거 설정 정보를 확인한다.
	// ※ 주의 : 각 테이블에 등록된 최대 트리거 데이타 개수를 모를 때는 아래와 같이 트리거 데이타 개수를 미리 파악한 후 사용하십시요.
	// Ex)      1) AxcTableGetTriggerData(lModuleNo, lTablePos, &lTriggerDataCount, NULL, NULL, NULL);
	//          2) dpTriggerData     = new double[lTriggerDataCount * 2];
	//          3) lpTriggerCount    = new long[lTriggerDataCount];
	//          4) dpTriggerInterval = new double[lTriggerDataCount];  
	DWORD  __stdcall AxcTableGetTriggerData(long lModuleNo, long lTablePos, long* lpTriggerDataCount, double* dpTriggerData, long* lpTriggerCount, double* dpTriggerInterval);

	
	// 카운터 모듈의 각 테이블에 2-D 절대위치에서 트리거 신호를 출력하기 위해 필요한 정보를 AxcTableSetTriggerData함수와 다른 방식으로 설정한다.
	// lTriggerDataCount : 설정 할 트리거 정보의 전체 개수
	// uOption : dpTriggerData 배열의 데이타 입력 방식을 지정 
	//   [0]   : dpTriggerData 배열에 X Pos[0], Y Pos[0], X Pos[1], Y Pos[1] 순서로 입력
	//   [1]   : dpTriggerData 배열에 X Pos[0], Y Pos[0], Count, Inteval, X Pos[1], Y Pos[1], Count, Inteval 순서로 입력
	// ※주의 : 
	//    1) dpTriggerData의 배열 개수를 주의하여 사용해야됩니다. 내부에서 사용되는 인자 보다 적은 배열을 지정하면 메모리 참조 오류가 발생 될 수 있음.
	//    2) Trigger Mode는 HPC4_RANGE_TRIGGER로 자동 변경됨
	//    3) 함수 내부에서 Trigger를 Disable한 후 모든 설정을 진행하며 완료 후 다시 Enable 시킴
    DWORD  __stdcall AxcTableSetTriggerDataEx(long lModuleNo, long lTablePos, long lTriggerDataCount, DWORD uOption, double* dpTriggerData);

	// 카운터 모듈의 각 테이블에 트리거 신호를 출력하기 위해 설정한 트리거 설정 정보를 확인한다.
	// ※ 주의 : 각 테이블에 등록된 최대 트리거 데이타 개수를 모를 때는 아래와 같이 트리거 데이타 개수를 미리 파악한 후 사용.
	// Ex)      1) AxcTableGetTriggerDataEx(lModuleNo, lTablePos, &lTriggerDataCount, &uOption, NULL);
	//          2) if(uOption == 0) : dpTriggerData     = new double[lTriggerDataCount * 2];
	//          3) if(uOption == 1) : dpTriggerData     = new double[lTriggerDataCount * 4];
	//          4) dpTriggerInterval = new double[lTriggerDataCount];  
    DWORD  __stdcall AxcTableGetTriggerDataEx(long lModuleNo, long lTablePos, long* lpTriggerDataCount,  DWORD* upOption, double* dpTriggerData);

  
	// 카운터 모듈의 지정한 테이블에 설정된 모든 트리거 데이타와 H/W FIFO의 데이타를 모두 삭제한다.
	DWORD  __stdcall AxcTableSetTriggerDataClear(long lModuleNo, long lTablePos);


	// 카운터 모듈의 지정한 테이블의 트리거 출력 기능을 동작시킴.
	// uEnable : 트리거를 출력 기능의 사용여부를 설정
	// ※ 주의 : 1) 트리거 출력 중 DISABLE하면 출력이 바로 멈춤
	//           2) AxcTableTriggerOneShot, AxcTableGetPatternShotData,AxcTableSetTriggerData, AxcTableGetTriggerDataEx 함수 호출시 자동으로 ENABLE됨
	DWORD  __stdcall AxcTableSetEnable(long lModuleNo, long lTablePos, DWORD uEnable);

	// 카운터 모듈의 지정한 테이블의 트리거 출력 기능의 동작 여부를 확인함.
	DWORD  __stdcall AxcTableGetEnable(long lModuleNo, long lTablePos, DWORD* upEnable);
		

	// 카운터 모듈의 지정한 테이블을 이용해 발생된 트리거 개수를 확인.
	// lpTriggerCount : 현재까지 출력된 트리거 출력 개수를 반환, AxcTableSetTriggerCountClear 함수로 초기화
	DWORD  __stdcall AxcTableReadTriggerCount(long lModuleNo, long lTablePos, long* lpTriggerCount);